# yolov8-person

./: .gitignore  Dockerfile  README.md  docker-compose.yml  draw_from_db.py  main.py  pyproject.toml
